kubernetes/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: $GCP_REGION/$PROJECT_ID/$REPO_NAME/frontend:$SHORT_SHA
          ports:
            - containerPort: 80
