kubernetes/history-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: history-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: history-service
  template:
    metadata:
      labels:
        app: history-service
    spec:
      containers:
        - name: history-service
          image: asia-southeast1-docker.pkg.dev/peerprep-g26-2025/peerprep/history-service:latest
          ports:
            - containerPort: 4040
