kubernetes/question-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: question-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: question-service
  template:
    metadata:
      labels:
        app: question-service
    spec:
      containers:
        - name: question-service
          image: asia-southeast1-docker.pkg.dev/peerprep-g26-2025/peerprep/question-service:latest
          ports:
            - containerPort: 4010
