kubernetes/user-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
        - name: user-service
          image: asia-southeast1-docker.pkg.dev/peerprep-g26-2025/peerprep/user-service:latest
          ports:
            - containerPort: 4000
