kubernetes/code-execution-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: code-execution-service
  labels:
    app: code-execution-service
spec:
  selector:
    app: code-execution-service
  ports:
    - protocol: TCP
      port: 4050
      targetPort: 4050
  type: ClusterIP
