kubernetes/history-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: history-service
spec:
  selector:
    app: history-service
  ports:
    - protocol: TCP
      port: 4040
      targetPort: 4040
  type: ClusterIP
