kubernetes/matching-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: matching-service
spec:
  selector:
    app: matching-service
  ports:
    - protocol: TCP
      port: 4020
      targetPort: 4020
  type: ClusterIP
