kubernetes/backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: peerprep-backend-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api/user(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: user-service
                port:
                  number: 4000

          - path: /api/question(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: question-service
                port:
                  number: 4010

          - path: /api/matching(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: matching-service
                port:
                  number: 4020

          - path: /api/collaboration(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: collaboration-service
                port:
                  number: 4030

          - path: /ws/collaboration(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: collaboration-service
                port:
                  number: 4030

          - path: /api/history(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: history-service
                port:
                  number: 4040

          - path: /api/code-execution(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: code-execution-service
                port:
                  number: 4050

          - path: /api/ai(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: ai-service
                port:
                  number: 4060

          - path: /api/communication(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: communication-service
                port:
                  number: 4070
